<resources>
    <string name="app_name">51投资</string>
    <string name="app_name1">点击进入</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_interaction">互动</string>
    <string name="navigation_transaction">交易</string>
    <string name="navigation_documentary">跟单</string>
    <string name="navigation_my">我的</string>
    <string name="textView_profit_list">盈利榜</string>
    <string name="textView_profit_details">盈利详情</string>
    <string name="textView_integral_mall">金币商城</string>
    <string name="textView_grab_a_red_envelope">抢红包</string>
    <string name="textView_be_bearish">看空</string>
    <string name="textView_be_zhang">看涨</string>
    <string name="textView_integral_rule">金币规则</string>
    <string name="textView_rule">规则</string>
    <string name="textView_look_details">获取记录</string>
    <string name="textView_look_details1">金币兑换</string>
    <string name="textView_redeem_now">立即兑换</string>
    <string name="textView_exchange_history">兑换历史</string>
    <string name="textView_my_points">我的金币</string>
    <string name="textView_expert_interpretation">专家解读</string>
    <string name="textView_expert_interpretation1">以上内容策略仅供参考&#044;不构成买卖依据&#033;</string>
    <string name="textView_expert_interpretation2">评论一下&#044;你的看法</string>
    <string name="textView_time">06&#058;00&#045;次日04&#058;00</string>
    <string name="textView_savings_deposit">储蓄卡</string>
    <string name="textView_trading_opportunities">交易机会</string>
    <string name="textView_my_course_collection">课程收藏</string>
    <string name="textView_my_online_service">在线客服</string>
    <string name="textView_my_service">客服</string>
    <string name="textView_my_account_management">账号管理</string>
    <string name="textView_inviting_friends">邀请好友</string>
    <string name="textView_inviting">请输入金额</string>
    <string name="textView_my_new">消息中心</string>
    <string name="textView_my_about_us">关于我们</string>
    <string name="textView_my_recharge">充值</string>
    <string name="textView_risk_introduction">风险介绍</string>
    <string name="textView_gold_entry">入金</string>
    <string name="textView_out_goldy">出金</string>
    <string name="textView_select_coupons">选择优惠券</string>
    <string name="textView_alipa_wechat">支付方式</string>
    <string name="textView_account">支付账号</string>
    <string name="textView_amount_money">支付金额</string>
    <string name="textView_alipay">支付宝</string>
    <string name="textView_union_pay">银联支付</string>
    <string name="textView_huanxun_pay">环迅支付</string>
    <string name="textView_yunju_pay">云聚支付</string>
    <string name="textView_security_payment">安全支付</string>
    <string name="textView_wechat">微信支付</string>
    <string name="textView_wechat1">微信</string>
    <string name="textView_continue_recharge">继续充值</string>
    <string name="textView_return_home">返回首页</string>
    <string name="textView_all_forward">全部提现</string>
    <string name="textView_forward">提现</string>
    <string name="textView_my_bank_more">最多绑定20张还款银行卡</string>
    <string name="textView_forward_money">提现金额&#160;&#160;&#040;元&#041;</string>
    <string name="textView_my_bank">我的银行卡</string>
    <string name="textView_bank_card_details">银行卡详情</string>
    <string name="textView_bank_cardholder_name">持卡人姓名</string>
    <string name="textView_bank_cardholder">持卡人</string>
    <string name="textView_bank_card_number">卡号</string>
    <string name="textView_bank_card">请输入卡号</string>
    <string name="textView_bank_card_identity">身份证件号</string>
    <string name="textView_bank_card_identity1">请输入身份证件号</string>
    <string name="textView_bank_cardholder1">请输入持卡人姓名</string>
    <string name="textView_bank_cardholder_phone">银行卡预留手机号</string>
    <string name="textView_bank_cardholder_details">如果更换了银行预留手机号&#044;请先解除绑定&#044;并在收银台付款时重新绑定</string>
    <string name="textView_bank_cardholder_unbind">解除绑定</string>
    <string name="textView_bank_cardholder_bind">绑定银行卡</string>
    <string name="textView_profit_e">盈利额</string>
    <string name="textView_profit_l">盈利率</string>
    <string name="textView_profit_reward">奖励</string>
    <string name="textView_preservation">保存</string>
    <string name="textView_profit_error1">允许成交价与挂单价上下</string>
    <string name="textView_profit_error">点误差</string>
    <string name="textView_profit_price">挂单价</string>
    <string name="textView_profit_please_price">请输入挂单价格</string>
    <string name="textView_oneself_bank">请输入本人的银行卡</string>
    <string name="textView_details_warehouse">平仓详情</string>
    <string name="textView_building_price">建仓价&#058;</string>
    <string name="textView_exit_price">平仓价&#058;</string>
    <string name="textView_exit_price_type">平仓类型&#058;</string>
    <string name="textView_exit_price_time">平仓时间&#058;</string>
    <string name="textView_building_price_time">建仓时间&#058;</string>
    <string name="textView_service_charge">手续费&#058;</string>
    <string name="textView_exit_price_service_charge">持仓过夜手续费&#058;</string>
    <string name="textView_profit_loss">盈亏&#058;</string>
    <string name="textView_add_bank">添加银行卡</string>
    <string name="textView_bank_list">银行卡列表</string>
    <string name="textView_input_account_phone">请输入手机号</string>
    <string name="textView_input_bank_phone">手机号</string>
    <string name="textView_input_bank_name">银行卡名称</string>
    <string name="textView_input_bank_name1">请输入银行卡名称</string>
    <string name="textView_input_account_password_new">请输入新密码</string>
    <string name="textView_input_account_again_password_new">再次输入新密码</string>
    <string name="textView_input_account_password">请输入密码</string>
    <string name="textView_input_account_code">请输入验证码</string>
    <string name="textView_input_password_two">两次密码不一致&#044;请从新输入</string>
    <string name="textView_input_account_code1">点击获取</string>
    <string name="textView_sign_in">登录</string>
    <string name="textView_register">注册</string>
    <string name="textView_register_sign_up">登录&#047;注册</string>
    <string name="textView_my_assets">我的资产(元)</string>
    <string name="textView_my_assets_total">我的总资产</string>
    <string name="textView_my_holding_assets">持仓资产(元)：</string>
    <string name="textView_my_available_balance">可用余额(元)：</string>
    <string name="textView_my_available_capital">可用资金</string>
    <string name="textView_my_exchange">中金所</string>
    <string name="textView_account1">账户</string>
    <string name="textView_record_eexchange">兑换记录</string>
    <string name="textView_record_old">金币记录</string>
    <string name="textView_billing_record">帐单记录</string>
    <string name="textView_school">在线学堂</string>
    <string name="textView_school_new">新手学堂</string>
    <string name="textView_head_portrait">头像</string>
    <string name="textView_nickname">昵称</string>
    <string name="textView_current_account">当前账号</string>
    <string name="textView_modify_password">修改密码</string>
    <string name="textView_exit_account">退出账号</string>
    <string name="textView_accout_management">账号管理</string>
    <string name="xiaomai">也小麦</string>
    <string name="xi_huanjin">黄金10千克（20元/手）1手</string>
    <string name="xi_analyst">分析师</string>
    <string name="xi1">11000元</string>
    <string name="xi1time">04&#045;19&#160;&#160;14&#058;&#160;20&#058;&#160;24</string>
    <string name="textView_meta_hand">元&#047;手</string>
    <string name="textView_no_data">暂无数据</string>
    <string name="textView_direction">方向</string>
    <string name="textView_hang_single_price">挂单价</string>
    <string name="textView_latest_price">最新价</string>
    <string name="textView_buy_more">买涨</string>
    <string name="textView_buy_fall">买跌</string>
    <string name="textView_buy">买</string>
    <string name="textView_hand">手</string>
    <string name="textView_buy_register">挂单</string>
    <string name="textView_post">发帖</string>
    <string name="textView_post_release">发布</string>
    <string name="textView_circle">圈子</string>
    <string name="textView_video">视频</string>
    <string name="textView_details">详情</string>
    <string name="textView_exper_interpretation">专家解读</string>
    <string name="textView_post_picture">图片</string>
    <string name="textView_post_emoticon">表情</string>
    <string name="textView_post_varieties">品种</string>
    <string name="textView_market_variety">行情品种</string>
    <string name="textView_cancel">取消</string>
    <string name="textView_market">行情</string>
    <string name="textView_comment">评论</string>
    <string name="textView_give_thumbs_up">点赞</string>
    <string name="textView_camera">相机</string>
    <string name="textView_album">相册</string>
    <string name="textView_phtonCode">请输入正确手机号</string>
    <string name="textView_phton">请输入手机号</string>
    <string name="textView_code">请输入验证发</string>
    <string name="textView_password">请输入密码</string>
    <string name="textView_agree">点击注册表示您已经阅读并同意《用户协议》</string>
    <string name="textView_isclaimer">和《免责声明》</string>
    <string name="textView_forget_password">忘记密码&#063;</string>
    <string name="textView_wait_for">下单成功&#033;&#160;等待发货</string>
    <string name="textView_recharge_success">充值成功</string>
    <string name="textView_recharge_cash_coupon">代金券</string>
    <string name="textView_recharge_choice">选择</string>
    <string name="textView_recharge">选择银行</string>
    <string name="textView_recharge_stop_loss">止损&#058;</string>
    <string name="textView_recharge_target_profit">止盈&#058;</string>
    <string name="textView_recharge_complete">完成</string>
    <string name="textView_recharge_submission">提交</string>
    <string name="textView_designates_number">输入数字</string>
    <string name="textView_designates_type">类型</string>
    <string name="textView_designates_building_price">建仓</string>
    <string name="textView_designates_increase_point">每增长1个点&#044;能收益1元</string>
    <string name="textView_designates_compensation">1000元以上可用包赔险</string>
    <string name="textView_designates_balance">余额</string>
    <string name="textView_designates_unlimited">不限</string>
    <string name="textView_designates_default_opening">建仓默认开启持仓过夜&#044;建仓后可以手动设置</string>
    <string name="textView_designates_total">总计</string>
    <string name="textView_designates_place_order">下单</string>
    <string name="textView_number_hands">请选择规格与手数</string>
    <string name="textView_hang_price">请输入挂单价(元)</string>
    <string name="textView_tishi">提示:实际成交价可能与挂单价出入</string>
    <string name="textView_designates_no_up">暂时未开启&#044;请进行期待</string>
    <string name="textView_please_again">亲爱的用户&#044;您的信息失效正在为您做处理&#044;请稍后</string>
    <string name="textView_time1">时间</string>
    <string name="textView_eexchang_operation">操作</string>
    <string name="textView_eexchang_umber">数量</string>
    <string name="textView_eexchang_source">来源</string>
    <string name="textView_holding_list">持仓列表</string>
    <string name="textView_holding">持仓历史</string>
    <string name="textView_holding_details">持仓详情</string>
    <string name="textView_holding_float_name">浮动盈损名称</string>
    <string name="textView_holding_float_umber">持仓数量</string>
    <string name="textView_holding_float_uilding">建仓费用</string>
    <string name="textView_holding_flat_out">平仓抛出</string>
    <string name="textView_purchase">买&#160;&#160;&#160;&#160;&#160;&#160;&#160;入</string>
    <string name="textView_expected_cost">预计花费</string>
    <string name="textView_holding_time">挂单时间</string>
    <string name="textView_trigger_time">触发时间</string>
    <string name="textView_holding_state">状&#160;&#160;&#160;&#160;&#160;&#160;&#160;态</string>
    <string name="textView_holding_ancel">撤&#160;&#160;单</string>
    <string name="textView_nstructions">体验券使用说明:</string>
    <string name="textView_vocucher">体验券</string>
    <string name="textView_nstructions2">确定</string>
    <string name="share_weichat">微信</string>
    <string name="share_weichatfriend">朋友圈</string>
    <string name="share_qqroom">QQ空间</string>
    <string name="share_qq">QQ</string>
</resources>