<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_interaction"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/navigation_interaction" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/navigation_transaction" />

    <item
        android:id="@+id/navigation_documentary"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/navigation_documentary" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/navigation_my" />

</menu>
