<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent" />

        <sp51.spotpass.com.spotpass.ui.view.NoScrollViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/commont_dp40" />


        <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigation"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="0dp"-->
        <!--android:layout_marginStart="0dp"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:menu="@menu/navigation" />-->

        <RadioGroup
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_home"
                style="@style/MainButtonStyle"
                android:drawableTop="@drawable/home_button_selector_home"
                android:text="@string/navigation_home" />

            <RadioButton
                android:id="@+id/rb_type"
                style="@style/MainButtonStyle"
                android:drawableTop="@drawable/home_button_selector_interaction"
                android:text="@string/navigation_interaction" />

            <RadioButton
                android:id="@+id/rb_community"
                style="@style/MainButtonStyle"
                android:drawableTop="@drawable/home_button_selector_transaction"
                android:text="@string/navigation_transaction" />

            <RadioButton
                android:id="@+id/rb_cart"
                style="@style/MainButtonStyle"
                android:visibility="gone"
                android:drawableTop="@drawable/home_button_selector_documentary"
                android:text="@string/navigation_documentary" />

            <RadioButton
                android:id="@+id/rb_user"
                style="@style/MainButtonStyle"
                android:drawableTop="@drawable/home_button_selector_my"
                android:text="@string/navigation_my" />

        </RadioGroup>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>